--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.37.0",
+    "@supabase/supabase-js": "^2.21.0",
+    "eslint": "^8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.13",
+    "@types/react": "^18.0.37",
+    "prettier": "^2.8.7",
+    "typescript": "^5.0.4"
   }
 }
