--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^0.0.14",
     "@supabase/supabase-js": "^2.21.0",
     "eslint": "^8.38.0",
     "eslint-config-next": "13.3.0",
+    "langchain": "^0.0.61",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
